Xiaofeng: Add clear in Makefile

--- a/artifacts/controller-deployment.yaml
+++ b/artifacts/controller-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         - -master=https://kubernetes.default.svc:443
         name: carrier-controller
         image: tr1stanzhi/carrier:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         volumeMounts:
         - mountPath: /tmp/kubeconfig
           name: kubeconfig
