--- a/artifacts/controller-deployment.yaml
+++ b/artifacts/controller-deployment.yaml
@@ -12,19 +12,7 @@ spec:
         controller: carrier-controller
     spec:
       containers:
-      - args:
-        - -kubeconfig=/tmp/kubeconfig
-        - -master=https://kubernetes.default.svc:443
-        name: carrier-controller
+      - name: carrier-controller
         image: tr1stanzhi/carrier:latest
         imagePullPolicy: Always
-        volumeMounts:
-        - mountPath: /tmp/kubeconfig
-          name: kubeconfig
-          readOnly: true
-      volumes:
-      - hostPath:
-          path: /root/config
-        name: kubeconfig
-
 
